# VideoStitcher

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: precomp.hpp  stitcher.cpp  stitching.hpp
